feat: Rename app to 蔡哥保平安提词器
Update app title, metadata, and default text to reflect the new application name and branding. Adjust audio constraints for better capture.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Google AI Studio App</title>
+    <title>蔡哥保平安提词器</title>
+    <!-- PWA / Home Screen Icon Support -->
+    <link rel="apple-touch-icon" href="https://files.oaiusercontent.com/file-S4Y2f8X9J8X9J8X9J8X9J8X9" />
+    <link rel="icon" href="https://files.oaiusercontent.com/file-S4Y2f8X9J8X9J8X9J8X9J8X9" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="蔡哥提词器" />
   </head>
   <body>
     <div id="root"></div>
