--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>蔡哥保平安提词器</title>
     <!-- PWA / Home Screen Icon Support -->
-    <link rel="apple-touch-icon" href="https://files.oaiusercontent.com/file-S4Y2f8X9J8X9J8X9J8X9J8X9" />
-    <link rel="icon" href="https://files.oaiusercontent.com/file-S4Y2f8X9J8X9J8X9J8X9J8X9" />
+    <link rel="apple-touch-icon" href="https://api.dicebear.com/7.x/initials/png?seed=C&backgroundColor=0ea5e9&fontSize=50" />
+    <link rel="icon" type="image/png" href="https://api.dicebear.com/7.x/initials/png?seed=C&backgroundColor=0ea5e9&fontSize=50" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="蔡哥提词器" />
