feat: Add PWA support and app branding
Integrates Progressive Web App (PWA) features for better offline capabilities and installability. Updates branding with app icon, name, and logo. Reorganizes dependencies and configurations for clarity and efficiency. Removes unused PWA registration code.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>蔡哥保平安【提词器】</title>
+    <!-- 网站图标 (Favicon) -->
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/logo.png" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <meta name="apple-mobile-web-app-title" content="提词器" />
+    <meta name="apple-mobile-web-app-title" content="蔡哥提词器" />
   </head>
   <body>
     <div id="root"></div>
